Section 2 almost done

--- a/Text/section2/section2.I.tex
+++ b/Text/section2/section2.I.tex
@@ -146,6 +146,7 @@
 		\end{axis}
 	\end{tikzpicture}
 	\caption{Зависимость модулярности от $k$ для рандомизированного случайного алгоритма на автоматически сгенерированном графе с параметрами $N = 40.000,\;K = 40,\;p_1 = 0.1,\;p_2 = 5\cdot 10^{-4}$}
+	\label{fig:q-auto13}
 \end{figure}
 
 
@@ -190,13 +191,17 @@
 
 Таким образом, вместо времени можно использовать значение $k$. Максимальное значение модулярности, которое может быть достигнуто на графе очень сильно отличается, поэтому нет смысла использовать абсолютное значение модулярности, но имеет смысл использовать относительные значения. При вычислении центрального значения \eqref{eq:spsa-central} в алгоритме одновременно возмущаемой стохастической аппроксимации использутся только разность функций качества. Таким образом, если использовать в функции качества логарифмы от модулярности --- разность функций укажет, во сколько раз модулярность изменилась.
 
-Так же функция качества должна принимать минимум, а не максимум, поэтому первой версией подобной функции может быть $f(Q) = -\alpha \ln Q,\;\alpha > 0$. Для того, чтобы принимать во внимание время работы, разумно добавить логарифм от $k$: $f(Q, k) = -\alpha (\ln Q - \beta \ln k),\;\alpha > 0, \beta \ge 0$. Коэффициент $\beta$ в таком случае можно рассматривать в следующем виде $\beta = \frac{\ln \gamma}{\ln 2}$, где коэффициент $\beta$ указывает, во сколько раз необходимо увеличиться модулярности для того, чтобы покрыть увеличение времени (то есть $k$) вдвое. Если время не имеет значение коэффициент $\gamma$ принимает значение 1, а следовательно коэффициент $\beta$ принимает значение 0. Коэффициент $\alpha$ же играет роль размера шага при выборе следующей центральной точки.
+Так же функция качества должна принимать минимум, а не максимум, поэтому первой версией подобной функции может быть $f(Q) = -\alpha \ln Q,\;\alpha > 0$. Для того, чтобы принимать во внимание время работы, разумно добавить логарифм от $k$: 
+\begin{equation} \label{eq:arg-f}
+f(Q, k) = -\alpha (\ln Q - \beta \ln k),\;\alpha > 0, \beta \ge 0
+\end{equation}
+Коэффициент $\beta$ в таком случае можно рассматривать в следующем виде $\beta = \frac{\ln \gamma}{\ln 2}$, где коэффициент $\beta$ указывает, во сколько раз необходимо увеличиться модулярности для того, чтобы покрыть увеличение времени (то есть $k$) вдвое. Если время не имеет значение коэффициент $\gamma$ принимает значение 1, а следовательно коэффициент $\beta$ принимает значение 0. Коэффициент $\alpha$ же играет роль размера шага при выборе следующей центральной точки.
 
 \begin{figure}[H]
 	\begin{tikzpicture}
 		\begin{axis}[
 		    table/col sep = semicolon,
-		    height = 0.2\paperheight, 
+		    height = 0.182\paperheight, 
 		    width = 0.73\columnwidth,
 		    xlabel = {$k$},
 		    ylabel = {$F(Q, k)$},
@@ -216,7 +221,7 @@
 	\begin{tikzpicture}
 		\begin{axis}[
 		    table/col sep = semicolon,
-		    height = 0.2\paperheight, 
+		    height = 0.182\paperheight, 
 		    width = 0.73\columnwidth,
 		    xlabel = {$k$},
 		    ylabel = {$F(Q, k)$},
@@ -291,7 +296,7 @@
 
 \subsection{Чувствительность к перепадам функции качества}
 
-Коэффициент $\alpha$ отвечает за то, насколько чувствителен алгоритм будет к перепадам функций качества --- чем больше $\alpha$, тем сильнее будет отличаться новая центральная точка от предыдущей в одной и той же ситуации. На трёх графах были измерены зависимости модулярности от параметра $\alpha$ при $d = 2,\ \sigma = 500,\ k_0 = 10,\ \beta = 0$:
+Коэффициент $\alpha$ отвечает за то, насколько чувствителен алгоритм будет к перепадам функций качества --- чем больше $\alpha$, тем сильнее будет отличаться новая центральная точка от предыдущей в одной и той же ситуации. На трёх графах были измерены зависимости модулярности от параметра $\alpha$ при $d = 2,\ \sigma = 500,\ \hat{k}_0 = 10,\ \beta = 0$:
 
 \begin{figure}[H]
 	\begin{tikzpicture}
