--- a/Text/diploma.tex
+++ b/Text/diploma.tex
@@ -13,7 +13,10 @@
 \usepackage{graphicx}       		% Работа с картинками
 \usepackage{float}          		% Необходимо для указания места картинки на странице
 \usepackage{algorithm2e}			% Algorithm
+\usepackage{array}					% Tabular box size
 \usepackage[font=small,skip=0pt]{caption} % Distance to caption
+\usepackage{tabularx}
+
 
 % ------------------- Русский для algorithm2e
 \SetKwInput{KwData}{Исходные параметры}
@@ -67,8 +70,8 @@
 \maketitle
 \tableofcontents
 
-% \input{section1/section1}
-% \input{section2/section2.I}
+\input{section1/section1}
+\input{section2/section2.I}
 \input{section2/section2.II}
 
 \bibliographystyle{unsrt}
