--- a/Text/section2/section2.II.tex
+++ b/Text/section2/section2.II.tex
@@ -4,14 +4,14 @@
 
 \subsection{Размер возмущения}
 
-Коэффициент $d$ отвечает за то, насколько сильно будет возмущаться центральная точка для получения следующих измерений. То есть, насколько $k_n^{+}$ и $k_n^{-}$ будут отличаться от $\hat{k}_{n - 1}$. Зависимость модулярности от размера возмущения при $f(Q, k) = -10 \ln Q,\ \sigma = 500,\ k_0 = 10$ будет выглядеть следующим образом:
+Коэффициент $d$ отвечает за то, насколько сильно будет возмущаться центральная точка для получения следующих измерений. То есть, насколько $k_n^{+}$ и $k_n^{-}$ будут отличаться от $\hat{k}_{n - 1}$. Зависимость модулярности от размера возмущения при $f(\mu, k) = -10 \ln \mu,\ \sigma = 500,\ \hat{k}_0 = 10$ будет выглядеть следующим образом:
 
 \begin{figure}[H]
 	\begin{tikzpicture}
 		\begin{axis}[
 		    table/col sep = semicolon,
 		    height = 0.16\paperheight, 
-		    width = 0.495\columnwidth,
+		    width = 0.49\columnwidth,
 		    xlabel = {$d$},
 		    ylabel = {$Q$},
 		    legend pos = north east,
@@ -26,7 +26,7 @@
 		\begin{axis}[
 		    table/col sep = semicolon,
 		    height = 0.16\paperheight, 
-		    width = 0.495\columnwidth,
+		    width = 0.49\columnwidth,
 		    xlabel = {$d$},
 		    ylabel = {$Q$},
 		    legend pos = south east,
@@ -40,7 +40,7 @@
 		\begin{axis}[
 		    table/col sep = semicolon,
 		    height = 0.16\paperheight, 
-		    width = 0.495\columnwidth,
+		    width = 0.49\columnwidth,
 		    xlabel = {$d$},
 		    ylabel = {$Q$},
 		    legend pos = south east,
@@ -55,7 +55,7 @@
 		\begin{axis}[
 		    table/col sep = semicolon,
 		    height = 0.16\paperheight, 
-		    width = 0.495\columnwidth,
+		    width = 0.49\columnwidth,
 		    xlabel = {$d$},
 		    ylabel = {$Q$},
 		    legend pos = south east,
@@ -75,7 +75,7 @@
 
 \subsection{Количество итераций в одном шаге}
 
-Параметр $\sigma$ указывает, как часто меняется $k$ в рандомизированного жадном алгоритме. Так как в функции качества используется медиана прироста модулярности, а не прирост модулярности за все $\sigma$ шагов --- при изменении $\sigma$ нет необходимости менять функцию качества, модулярность прироста будет оставаться приблизительно такой же по величине, в то время как прирост модулярности линейно зависит от $\sigma$. Зависимость модулярности от количества итераций в одном шаге при $d = 5,\ f(Q, k) = -10 \ln Q,\ k_0 = 10$ принимает такой вид:
+Параметр $\sigma$ указывает, как часто меняется $k$ в рандомизированного жадном алгоритме. Так как в функции качества используется медиана прироста модулярности, а не прирост модулярности за все $\sigma$ шагов --- при изменении $\sigma$ нет необходимости менять функцию качества, модулярность прироста будет оставаться приблизительно такой же по величине, в то время как прирост модулярности линейно зависит от $\sigma$. Зависимость модулярности от количества итераций в одном шаге при $d = 5,\ f(\mu, k) = -10 \ln \mu,\ \hat{k}_0 = 10$ принимает такой вид:
 
 \begin{figure}[H]
 	\begin{tikzpicture}
@@ -129,3 +129,146 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \subsection{Начальная центральная точка}
+
+Начальная центральная точка указывает, с какой точки будут находиться $k_1^{-}$ и $k_1^{+}$, с которыми будут проходиться первые и вторые $\sigma$ итераций, соответственно. Зависимость модулярности от начальной центральной точки $\hat{k}_0$ при $d = 5,\ f(\mu, k) = -10 \ln \mu,\ \sigma = 1000$ будет выглядеть следующим образом:
+
+\begin{figure}[H]
+	\begin{tikzpicture}
+		\begin{axis}[
+		    table/col sep = semicolon,
+		    height = 0.16\paperheight, 
+		    width = 0.31\columnwidth,
+		    xlabel = {$\hat{k}_0$},
+		    ylabel = {$Q$},
+		    legend pos = north east,
+		    no marks,
+		    title = {cond-mat-2003}
+		]
+		\addplot table [x={k0}, y={q}]{data/arg/k0/cond_k0.csv};
+		\end{axis}
+	\end{tikzpicture}
+	\hskip 0.01\columnwidth
+	\begin{tikzpicture}
+		\begin{axis}[
+		    table/col sep = semicolon,
+		    height = 0.16\paperheight, 
+		    width = 0.31\columnwidth,
+		    xlabel = {$\hat{k}_0$},
+		    legend pos = south east,
+		    no marks,
+		    title = {caidaRouterLevel}
+		]
+		\addplot table [x={k0}, y={q}]{data/arg/k0/caida_k0.csv};
+		\end{axis}
+	\end{tikzpicture}
+	\hskip 0.01\columnwidth
+	\begin{tikzpicture}
+		\begin{axis}[
+		    table/col sep = semicolon,
+		    height = 0.16\paperheight, 
+		    width = 0.31\columnwidth,
+		    xlabel = {$\hat{k}_0$},
+		    legend pos = south east,
+		    no marks,
+		    title = {cnr-2000}
+		]
+		\addplot table [x={k0}, y={q}]{data/arg/k0/cnr_k0.csv};
+		\end{axis}
+	\end{tikzpicture}
+	\caption{Зависимость модулярности от значения $\hat{k}_0$ на трёх графах}
+	\label{fig:arg-k0}
+\end{figure}
+
+Как можно заметить, на разных графах модулярность ведёт себя по разному в зависимости от $\hat{k}_0$. График для графа \emph{cond-mat-2003} на рисунке \ref{fig:arg-k0} начинается от первого вхождения $\hat{k}_0 = 7$ (остальные от $\hat{k}_0 = 5$), так как при меньших значениях модулярность очень сильно падает. Это связано с тем, что $d = 5$ и следовательно $k_1^{-} = 1$, в то время как рандомизированный алгоритм с параметром $k = 1$ часто работает сильно хуже остальных. Однако выгоднее использовать небольшое значение $\hat{k}_0$, хоть и большее $d + 1$.
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\subsection{Коэффициент $\beta$ функции качества}
+
+Коэффициент $\beta$ функции качества \eqref{eq:arg-f} указывает на то, насколько много внимания алгоритм обращает на величину точек $k^{-}_n$ и $k^{+}_n$ при выборе следующей центральной точки. Предполагалось, что чем больше $\beta$, тем быстрее будет работать алгоритм, однако возможно будет находить более плохие разбиения. Такие результаты получились при параметрах $d = 5,\ \sigma = 1000,\ \hat{k}_0 = 8$, функция качества $f(\mu, k) = -10(\ln \mu - \beta \ln k)$:
+
+\begin{figure}[H]
+	\begin{tikzpicture}
+		\begin{axis}[
+		    table/col sep = semicolon,
+		    height = 0.16\paperheight, 
+		    width = 0.95\columnwidth,
+		    xlabel = {$\beta$},
+		    ylabel = {$Q$},
+		    legend pos = north east,
+		    x tick label style = {align = center, rotate = 20, anchor = north east},
+		    no marks
+		]
+		\addplot table [x={beta}, y={q}]{data/arg/beta/cond_beta.csv};
+		\end{axis}
+	\end{tikzpicture}
+	\begin{tikzpicture}
+		\begin{axis}[
+		    table/col sep = semicolon,
+		    height = 0.16\paperheight, 
+		    width = 0.95\columnwidth,
+		    xlabel = {$\beta$},
+		    ylabel = {$t$},
+		    legend pos = north east,
+		    no marks,
+		    x tick label style = {align = center, rotate = 20, anchor = north east},
+		]
+		\addplot[red] table [x={beta}, y={time}]{data/arg/beta/cond_beta.csv};
+		\end{axis}
+	\end{tikzpicture}
+	\caption{Зависимость модулярности и времени от параметра функции качества $\beta$ на графе \emph{cond-mat-2003}}
+\end{figure}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\subsection{Результаты}
+
+На таблицах \ref{tab:arg-res-q} и \ref{tab:arg-res-t} показано сравнение результатов работы рандомизированного жадного алгоритма и адаптивного рандомизированного жадного алгоритма. В качестве графов для рассмотрения выбраны $NNNN$ графов.
+
+Рандомизированный жадный алгоритм в таблицах обозначается как $RG(\cdot)$ с параметром $k$ в качестве аргумента. Адаптивный рандомизированный жадный алгоритм обозначается как $ARG(\cdot)$ с параметром функции качества $\beta$ в качестве аргумента, остальные параметры при этом равны $d = 5,\ f(\mu, k) = -10 (\ln \mu - \beta \ln k),\ \sigma = 1000,\ \hat{k}_0 = 8$. Такой набор параметров не гарантирует наилучший результат на каждом графе или даже наилучший в среднем по всем графам результат для адаптивного алгоритма, однако показывает неплохие результаты.
+
+Оба алгоритма --- рандомизированные, поэтому на каждом отдельном запуске результат может оказаться очень хорошим или сравнительно плохим, однако даст мало сведений о качестве алгоритма. Поэтому для каждого графа производилось определённое количество запусков, и в качестве модулярности бралась медиана значений, а в качестве времени --- среднее, для повышения точности измерения времени.
+
+Так, для графа \emph{as-22july06} производился 101 запуск, для \emph{cond-mat-2003} 51 запуск, для \emph{caidaRouterLevel} и \emph{cnr-2000} 11 запусков, для \emph{eu-2005} три запуска. Для кратости в таблице эти графы записываются как \emph{22july} вместо \emph{as-22july06}, \emph{cond} вместо \emph{cond-mat-2003}, \emph{caida} вместо \emph{caidaRouterLevel} и \emph{cnr} вместо \emph{cnr-2000}. Кроме того, в таблицу вошли результаты работы над автоматически сгенерированным графом, который уже появлялся в работе, к примеру в рисунке \ref{fig:q-auto13}, в таблице он обозначается как \emph{auto40}. Для этого графа для повышения точности производилось 11 запусков.
+
+\newcolumntype{L}[1]{>{\raggedright\arraybackslash}p{#1}}	% Tabular commands
+\newcolumntype{C}[1]{>{\centering\arraybackslash}p{#1}}
+\newcolumntype{R}[1]{>{\raggedleft\arraybackslash}p{#1}}
+
+\begin{table}[H]
+	\caption{Модулярности разбиений, полученных в результатах работы рандомизированного жадного алгоритма и адаптивного рандомизированного жадного алгоритма с разными параметрами}
+	\label{tab:arg-res-q}
+	\begin{tabularx}{\textwidth}{XR{1.5cm}R{1.5cm}R{1.5cm}R{1.5cm}R{1.5cm}R{1.5cm}}\hline
+				& 22july 	& cond 		& auto40	& caida 	& cnr 		& eu-2005	\\\hline
+	RG(1) 		& 0.65281	& 0.00012 	& 0.78944	& 0.01938	& 0.90237 	& 0.92765	\\
+	RG(3)		& 0.64658	& 0.19727	& 0.79988	& 0.81101	& 0.91192	& 0.92559	\\
+	RG(10)		& 0.64024	& 0.70738	& 0.80417	& 0.79883	& 0.91144	& 0.91780	\\
+	RG(50)		& 0.63479	& 0.69403	& 0.80273	& 0.79300	& 0.90997	& 0.90416	\\
+	ARG(0)		& 0.64262	& 0.71129	& 0.80136	& 0.79970	& 0.91028	& 0.91062	\\
+	ARG(0.01)	& 0.64041	& 0.71232	& 0.80145	& 0.80114	& 0.91041	& 0.91047	\\
+	ARG(0.05)	& 0.64264	& 0.71193	& 0.80174	& 0.80216	& 0.91039	& 0.91048	\\
+	ARG(0.1)	& 0.64134	& 0.69749	& 0.80152	& 0.80059	& 0.91108	& 0.91199	\\
+	ARG(0.2)	& 0.64192	& 0.56631	& 0.80102	& 0.80176	& 0.91075	& 0.91242	\\\hline
+	\end{tabularx}
+\end{table}
+\begin{table}[H]
+	\caption{Время работы (в миллисекундах) рандомизированного жадного алгоритма и адаптивного рандомизированного жадного алгоритма с разными параметрами}
+	\label{tab:arg-res-t}
+	\begin{tabularx}{\textwidth}{XR{1.5cm}R{1.5cm}R{1.5cm}R{1.5cm}R{1.5cm}R{1.5cm}}\hline
+				& 22july 	& cond 		& auto40	& caida 	& cnr 		& eu-2005	\\\hline
+	RG(1) 		& 177		& 58 		& 4,652		& 852		& 26,083	& 202,188	\\
+	RG(3)		& 189		& 184		& 4,591		& 9,114		& 26,056	& 200,686	\\
+	RG(10)		& 231		& 463		& 6,017		& 10,244	& 27,137	& 207,689	\\
+	RG(50)		& 464		& 931		& 12,558	& 15,217	& 33,592	& 246,170	\\
+	ARG(0)		& 238		& 477		& 6,526		& 11,573	& 30,033	& 233,761	\\
+	ARG(0.01)	& 241		& 477		& 6,807		& 11,607	& 30,465	& 226,869	\\
+	ARG(0.05)	& 238		& 474		& 6,479		& 11,514	& 29,054	& 225,748	\\
+	ARG(0.1)	& 233		& 476		& 6,428		& 11,509	& 29,971	& 226,427	\\
+	ARG(0.2)	& 222		& 351		& 6,105		& 11,220	& 29,784	& 266,038	\\\hline
+	\end{tabularx}
+\end{table}
+
+В большинстве случаев один или несколько параметров $k$ дают рандомизированному жадному алгоритму лучшие результаты, чем все результаты адаптивного рандомизированного алгоритма, однако адаптивный вариант даёт более стабильные результаты при не очень большом увеличении по времени. Можно заметить, что небольшие значения параметра $\beta$ дают лучшие результаты, чем нулевое значение, а при более больших значениях параметра время работы алгоритма уменьшается, но незначительно. В таблицу не попали результаты алгоритмов со значениями $\beta$ больше 0.2, где время работы действительно сильно снижалось, однако и значения модулярности получались слишком маленькими.
+
