--- a/Text/section1/section1.tex
+++ b/Text/section1/section1.tex
@@ -129,6 +129,7 @@ $P \leftarrow $ создать разбиение из $joins\_list[1..best\_ste
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \subsection{Ансамблевая стратегия}
+\label{subsec:ens}
 
 Овельгённе и Гейер-Шульц в 2012 году выиграли 10th DIMACS Implementation Challenge с ансамблевой стратегией выделения сообществ (ES). Ансамблевая стратегия заключается в том, что сначала $s$ начальных алгоритмов разбивают граф на сообщества, и считается, что те вершины, в которых начальные алгоритмы сошлись во мнении определены по сообществам правильно, а те, которые остались, распределяет по сообществам финальный алгоритм \cite{Ovelgoenne&Geyer-Schulz:2012b}.
 
@@ -225,3 +226,5 @@ $$v, w \in \mathscr{N}, \exists i \in 1..s\ :\ c_{P_i}(v) \ne c_{P_i}(w) \Righta
 \end{itemize}
 
 Кроме того, некоторые тесты используют автоматически сгенерированные графы с заранее известным количеством сообществ. Такой граф имеет четыре параметра --- количество узлов $N$, количество сообществ $K$ (все сообщества одинаковых размеров), вероятность появления ребра между узлами одного сообщества $p_1$ и вероятность появления ребра между вершинами разных сообществ $p_2$. Преимущество автоматически сгенерированных графов заключается в проверке работы алгоритма на разных по размеру графах с разными по плотности сообществами. Так же из построения известны реальные сообщества. Однако графы, построенные по реальным системам могут сильно отличаться от подобных графов.
+
+Так, далее в работе используется автоматически сгенерированный граф под названием \emph{auto40}, со следующими параметрами: $N = 40,000,\ K = 40,\ p_1 = 0.1,\ p_2 = 5\cdot 10^{-4}$.
