--- a/Text/section3/section3.tex
+++ b/Text/section3/section3.tex
@@ -46,7 +46,7 @@
 Так как адаптивный рандомизированный жадный алгоритм не может работать на графах с маленьким количеством узлов или на разбиениях с маленьким количеством сообществ --- была предложена другая схема адаптивной ансамблевой стратегии:
 
 \begin{enumerate}
-	\item На вход подаётся граф $G$. Выбор параметров алгоритма: $d \in \mathbb{N}$ --- размер возмущения, $f(Q, k): \mathbb{R} \times \mathbb{N} \rightarrow \mathbb{R}$ --- функция качества, $l_1 \in \mathbb{N}$ --- количество шагов, $l_2 \le l_1 \in \mathbb{N}$ --- количество лучших начальных разбиений, учавствующих в создании промежуточного разбиения. И наконец $\hat{k}_0 \in \mathbb{N}$ --- начальная центральная точка. Установка счётчика $n = 0$. Установка список начальных разбиений $S = \emptyset$
+	\item На вход подаётся граф $G$. Выбор параметров алгоритма: $d \in \mathbb{N}$ --- размер возмущения, $f(Q, k): \mathbb{R} \times \mathbb{N} \rightarrow \mathbb{R}$ --- функция качества, $l \in \mathbb{N}$ --- количество шагов, $r \in (0, 1]$ --- доля лучших начальных разбиений, учавствующих в создании промежуточного разбиения. И наконец $\hat{k}_0 \in \mathbb{N}$ --- начальная центральная точка. Установка счётчика $n = 0$. Установка список начальных разбиений $S = \emptyset$
 	\item Увеличение счётчика $n \rightarrow n + 1$
 	\item Вычисление следующий параметров рандомизированного жадного алгоритма $k_n^{-} = \max\{1, \hat{k}_{n - 1} - d\}$ и $k_n^{+} = \hat{k}_{n - 1} + d$
 	\item Выделение сообществ в графе $G$ рандомизированным жадным алгоритмом с параметром $k = k_n^{-}$, пара из результирующего разбиения $P_n^{-}$ и его модулярности $Q_n^{-}$ записывается в список $S$
@@ -56,14 +56,567 @@
 	\begin{equation}\label{eq:aes-centre}
 		\hat{k}_n = \max\left\{1, \left[\hat{k}_{n - 1} - \frac{y_n^{+} - y_n^{-}}{k_n^{+} - k_n^{-}}\right]\right\}
 	\end{equation}
-	\item Если $n \ne l_1$ --- переход на второй пункт, иначе --- на следующий
-	\item По $l_2$ лучшим разбиениям (с наибольшей модулярностью) в $S$ создаётся промежуточное множество, которое затем передаётся в финальный алгоритм
+	\item Если $n \ne l$ --- переход на второй пункт, иначе --- на следующий
+	\item По $\lceil r|S| \rceil = \lceil 2rl \rceil$ лучшим разбиениям (с наибольшей модулярностью) в $S$ создаётся промежуточное множество, которое затем передаётся в финальный алгоритм
 \end{enumerate}
 
 При этом граф $G$ может быть иметь сколь угодно маленькое количество узлов.
 
+Далее в работе ансамблевая стратегия с адаптивным построением промежуточного разбиения будет называться \emph{адаптивной ансамблевой стратегией}.
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\subsection{Количество начальных разбиений}
+\subsection{Размер возмущения и чувствительность к перепадам функции качества}
 
+Функцией качества для построения промежуточного разбиения выбрана $f(Q, k) = -\alpha(\ln Q - \beta \ln k)$. Мотивация этого выбора аналогична выбору функции качества для адаптивного рандомизированного алгоритма, описанная в подразделе \ref{subsec:arg-f}. Аналогично, параметр $\alpha$ указывает на чувствительность алгоритма к разностям значений функции качества, а параметр $\beta$ указывает на значимость времени работы алгоритма.
+
+\begin{figure}[H]
+	\begin{tikzpicture}
+		\begin{semilogxaxis}[
+		    table/col sep = semicolon,
+		    height = 0.165\paperheight, 
+		    width = 0.83\columnwidth,
+		    xlabel = {$\alpha$},
+		    ylabel = {$Q$},
+		    legend pos = outer north east,
+		    no marks,
+		    title = {celegans\_metabolic},
+		    yticklabel style={/pgf/number format/fixed,
+                  /pgf/number format/precision=3},
+            y label style={at={(axis description cs:0,.5)}, anchor=south},
+		]
+		\addplot table [x={alpha}, y={q}]{data/es/alphad/celegans_1.csv};
+		\addplot table [x={alpha}, y={q}]{data/es/alphad/celegans_2.csv};
+		\legend{{$d = 1$}, {$d = 2$}};
+		\end{semilogxaxis}
+	\end{tikzpicture}
+	\caption{Зависимость модулярности от параметра $\alpha$ при $d = 1$ и $d = 2$ в работе адаптивной ансамблевой стратегии на графе \emph{celegans\_metabolic}}
+	\label{fig:es-alpha-d1}
+\end{figure}
+\begin{figure}[H]
+	\begin{tikzpicture}
+		\begin{semilogxaxis}[
+		    table/col sep = semicolon,
+		    height = 0.15\paperheight, 
+		    width = 0.825\columnwidth,
+		    xlabel = {$\alpha$},
+		    ylabel = {$Q$},
+		    legend pos = outer north east,
+		    no marks,
+		    title = {jazz},
+		    yticklabel style={/pgf/number format/fixed,
+                  /pgf/number format/precision=4},
+            y label style={at={(axis description cs:-0.005,.5)}, anchor=south},
+		]
+		\addplot table [x={alpha}, y={q}]{data/es/alphad/jazz_1.csv};
+		\addplot table [x={alpha}, y={q}]{data/es/alphad/jazz_2.csv};
+		\legend{{$d = 1$}, {$d = 2$}};
+		\end{semilogxaxis}
+	\end{tikzpicture}
+	\begin{tikzpicture}
+		\begin{semilogxaxis}[
+		    table/col sep = semicolon,
+		    height = 0.15\paperheight, 
+		    width = 0.83\columnwidth,
+		    xlabel = {$\alpha$},
+		    ylabel = {$Q$},
+		    legend pos = outer north east,
+		    no marks,
+		    title = {as-22july06},
+		    yticklabel style={/pgf/number format/fixed,
+                  /pgf/number format/precision=3},
+            y label style={at={(axis description cs:0,.5)}, anchor=south},
+		]
+		\addplot table [x={alpha}, y={q}]{data/es/alphad/july_1.csv};
+		\addplot table [x={alpha}, y={q}]{data/es/alphad/july_2.csv};
+		\legend{{$d = 1$}, {$d = 2$}};
+		\end{semilogxaxis}
+	\end{tikzpicture}
+	\begin{tikzpicture}
+		\begin{semilogxaxis}[
+		    table/col sep = semicolon,
+		    height = 0.15\paperheight, 
+		    width = 0.85\columnwidth,
+		    xlabel = {$\alpha$},
+		    ylabel = {$Q$},
+		    legend pos = outer north east,
+		    no marks,
+		    title = {netscience}
+		]
+		\addplot table [x={alpha}, y={q}]{data/es/alphad/netscience_1.csv};
+		\addplot table [x={alpha}, y={q}]{data/es/alphad/netscience_2.csv};
+		\legend{{$d = 1$}, {$d = 2$}};
+		\end{semilogxaxis}
+	\end{tikzpicture}
+	\caption{Продолжение рисунка \ref{fig:es-alpha-d1}. Зависимость модулярности от параметра $\alpha$ при $d = 1$ и $d = 2$ в работе адаптивной ансамблевой стратегии на графах \emph{jazz}, \emph{as-22july06} и \emph{netscience}}
+	\label{fig:es-alpha-d2}
+\end{figure}
+
+На рисунках \ref{fig:es-alpha-d1} и \ref{fig:es-alpha-d2} изображены результаты адаптивной стратегии с параметром $\beta = 0$ и остальными параметрами равными $f(Q, k) = -\alpha \ln Q,\ \hat{k}_0 = 5,\ l = 10,\ r = 1$. В качестве финального алгоритма используется $RG_{10}$.
+
+Значения модулярности колеблются в очень небольшом промежутке и на вышеприведённых четырёх графах $\alpha$, примерно равное $10^3$ даёт в среднем лучшие результаты. При этом на графах \emph{celegans\_metabolic}, \emph{jazz} и \emph{netscience} зависимости модулярности от $\alpha$ выглядят одинакого для $d = 1$ и $d = 2$, а на \emph{as-22july06} зависимость при параметре $d = 2$ лежит в среднем выше, чем при параметре $d = 1$. Б\'{о}льшие значения параметра $d$ чреваты тем, что алгоритм будет слишком сильно отклоняться от оптимального значения параметра $k$.
+
+На рисунке \ref{fig:es-alpha-d3} представлено изменение $k^{-}_n$ и $k^{+}_n$ в ходе построения промежуточного разбиения от номера шага при $\alpha = 994$ на графе \emph{as-22july06} и $\alpha = 1020$ на графе \emph{netscience}, в обоих случаях $d = 2$, а остальные параметры те же, что и на рисунках \ref{fig:es-alpha-d1} и \ref{fig:es-alpha-d2}. Отдельно измерено, что наилучшее в среднем значение рандомизированный жадный алгоритм даст при $k = 1$ на графе \emph{as-22july06} и при очень больших $k$ на графе \emph{netscience}.
+
+\begin{figure}[H]
+	\begin{tikzpicture}
+		\begin{axis}[
+		    table/col sep = semicolon,
+		    height = 0.16\paperheight, 
+		    width = 0.49\columnwidth,
+		    xlabel = {$n$},
+		    ylabel = {$k^{\pm}_n$},
+		    legend pos = north east,
+		    no marks,
+		    title = {as-22july06}
+		]
+		\addplot table [x expr = {\thisrowno{0} / 2}, y={k}]{data/es/alphad/_july994.csv};
+		\end{axis}
+	\end{tikzpicture}
+	\hskip 0.01\columnwidth
+	\begin{tikzpicture}
+		\begin{axis}[
+		    table/col sep = semicolon,
+		    height = 0.16\paperheight, 
+		    width = 0.49\columnwidth,
+		    xlabel = {$n$},
+		    ylabel = {$k^{\pm}_n$},
+		    legend pos = north east,
+		    no marks,
+		    title = {netscience}
+		]
+		\addplot table [x expr = {\thisrowno{0} / 2}, y={k}]{data/es/alphad/_netscience1020.csv};
+		\end{axis}
+	\end{tikzpicture}
+	\caption{Изменение $k^{-}_n$ и $k^{+}_n$ с изменением номера шага в работе адаптивной ансамблевой стратегии на графах \emph{as--22july06} и \emph{netscience}}
+	\label{fig:es-alpha-d3}
+\end{figure}
+
+Заметно, как быстро алгоритмы находят близкие к оптимальным значениям центральные точки $\hat{k}_n$, вокруг которых.
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\subsection{Начальная центральная точка}
+
+Начальная центральная точка $\hat{k}_0$ указывает, рядом с какой точкой будут находиться параметры первых двух запусков рандомизированного жадного алгоритма. Очень большим делать начальную центральную точку не имеет смысла, так как довольно много графов имеет небольшой оптимальный параметр.
+
+\begin{figure}[H]
+	\begin{tikzpicture}
+		\begin{axis}[
+		    table/col sep = semicolon,
+		    height = 0.145\paperheight,
+		    width = 0.465\columnwidth,
+		    xlabel = {$\hat{k}_0$},
+		    ylabel = {$Q$},
+		    no marks,
+		    title = {celegans\_metabolic},
+		    y label style={at={(axis description cs:0,.5)}, anchor=south},
+		    yticklabel style={/pgf/number format/fixed,
+                  /pgf/number format/precision=4},
+		]
+		\addplot table [x = {k0}, y={q}]{data/es/k0/celegans_k0.csv};
+		\end{axis}
+	\end{tikzpicture}
+	\hskip 10pt
+	\begin{tikzpicture}
+		\begin{axis}[
+		    table/col sep = semicolon,
+		    height = 0.145\paperheight,
+		    width = 0.465\columnwidth,
+		    xlabel = {$\hat{k}_0$},
+		    ylabel = {$Q$},
+		    no marks,
+		    title = {jazz},
+		    y label style={at={(axis description cs:0,.5)}, anchor=south},
+		    yticklabel style={/pgf/number format/fixed,
+                  /pgf/number format/precision=4},
+		]
+		\addplot table [x = {k0}, y={q}]{data/es/k0/jazz_k0.csv};
+		\end{axis}
+	\end{tikzpicture}\\ %	\hskip 10pt
+	\begin{tikzpicture}
+		\begin{axis}[
+		    table/col sep = semicolon,
+		    height = 0.145\paperheight,
+		    width = 0.465\columnwidth,
+		    xlabel = {$\hat{k}_0$},
+		    ylabel = {$Q$},
+		    legend pos = north east,
+		    no marks,
+		    title = {as-22july06},
+		    y label style={at={(axis description cs:0,.5)}, anchor=south},
+		    yticklabel style={/pgf/number format/fixed,
+                  /pgf/number format/precision=3},
+		]
+		\addplot table [x = {k0}, y={q}]{data/es/k0/july_k0.csv};
+		\end{axis}
+	\end{tikzpicture}
+	\hskip 10pt
+	\begin{tikzpicture}
+		\begin{axis}[
+		    table/col sep = semicolon,
+		    height = 0.145\paperheight,
+		    width = 0.465\columnwidth,
+		    xlabel = {$\hat{k}_0$},
+		    ylabel = {$Q$},
+		    legend pos = north east,
+		    no marks,
+		    title = {netscience},
+		    y label style={at={(axis description cs:0,.5)}, anchor=south},
+		    yticklabel style={/pgf/number format/fixed,
+                  /pgf/number format/precision=4},
+		]
+		\addplot table [x = {k0}, y={q}]{data/es/k0/netscience_k0.csv};
+		\end{axis}
+	\end{tikzpicture}
+	\caption{Зависимость модулярности от начальной центральной точки $\hat{k}_0$ в работе адаптивной ансамблевой стратегии на четырёх графах}
+	\label{fig:es-k0}
+\end{figure}
+
+Однако, как показывает рисунок \ref{fig:es-k0}, на самом деле модулярность очень слабо зависит от начальной центральной точки. Для получения рисунка ансамблевая стратегия запускалась с параметрами $d = 2,\ f(Q, k) = -1000 \ln Q,\ l = 10,\ r = 1$, в качестве финального алгоритма используется $RG_{10}$.
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\subsection{Количество шагов и доля хороших разбиений}
+
+Множество $S$ состоит из $2l$ разбиений, из которых затем выбираются $\lceil 2rl \rceil$ лучших разбиений, учавствующих в создании промежуточного разбиения. Предполагается, что при слишком маленьких $l$ алгоритм не успеет найти оптимальную точку $k$, в то время как при $r \rightarrow 1$ в создании промежуточного разбиения примут участие много плохих разбиений, полученных на первых шагах. При $d = 2,\ f(Q, k) = -1000 \ln Q,\ \hat{k}_0 = 5,\ l = 10$ и финальном алгоритме $RG_{10}$ зависимость модулярности от доли хороших разбиений выглядит следующим образом:
+
+\begin{figure}[H]
+	\begin{tikzpicture}
+		\begin{axis}[
+		    table/col sep = semicolon,
+		    height = 0.16\paperheight,
+		    width = 0.3\columnwidth,
+		    xlabel = {$r$},
+		    ylabel = {$Q$},
+		    legend pos = north east,
+		    no marks,
+		    title = {celegans\_metabolic},
+		    y label style={at={(axis description cs:0.01,.5)}, anchor=south},
+		    yticklabel style={/pgf/number format/fixed,
+                  /pgf/number format/precision=4},
+		]
+		\addplot table [x = {r}, y={q}]{data/es/r/celegans_r.csv};
+		\end{axis}
+	\end{tikzpicture}
+	\hskip -0.01\columnwidth
+	\begin{tikzpicture}
+		\begin{axis}[
+		    table/col sep = semicolon,
+		    height = 0.16\paperheight,
+		    width = 0.3\columnwidth,
+		    xlabel = {$r$},
+		    ylabel = {$Q$},
+		    legend pos = north east,
+		    no marks,
+		    title = {jazz},
+		    y label style={at={(axis description cs:0.01,.5)}, anchor=south},
+		    yticklabel style={/pgf/number format/fixed,
+                  /pgf/number format/precision=4},
+		]
+		\addplot table [x = {r}, y={q}]{data/es/r/jazz_r.csv};
+		\end{axis}
+	\end{tikzpicture}
+	\hskip 0\columnwidth
+	\begin{tikzpicture}
+		\begin{axis}[
+		    table/col sep = semicolon,
+		    height = 0.16\paperheight,
+		    width = 0.3\columnwidth,
+		    xlabel = {$r$},
+		    ylabel = {$Q$},
+		    legend pos = north east,
+		    no marks,
+		    title = {as-22july06},
+		    y label style={at={(axis description cs:0.05,.5)}, anchor=south},
+		    yticklabel style={/pgf/number format/fixed,
+                  /pgf/number format/precision=3},
+		]
+		\addplot table [x = {r}, y={q}]{data/es/r/july_r.csv};
+		\end{axis}
+	\end{tikzpicture}
+	\caption{Зависимость модулярности от доли хороших разбиений, учавствующих в создании промежуточного разбиения, $r$ в работе адаптивной ансамблевой стратегии на трёх графах}
+	\label{fig:es-r}
+\end{figure}
+
+Видно, что маленькие $r$ дают плохие разбиения, что логично, а затем на разных графах алгоритмы ведут себя по разному, хотя и разница между модулярностями при разных значениях $r$ небольшия.
+
+На рисунке \ref{fig:es-l-q} изображена зависимость модулярности от количества шагов $l$ при $r = 0.5$ и $r = 1$. Остальные параметры при этом были равны $d = 2,\ f(Q, k) = -1000 \ln Q,\ \hat{k}_0 = 5$. В качестве финального алгоритма, как и в предыдущих примерах, использовался рандомизированный жадный алгоритм с параметром $k = 10$.
+
+Стоит отметить, что несмотря на то, что модулярность не сильно меняется при росте $l$ --- время работы растёт практически линейно, как можно увидеть на рисунке \ref{fig:es-l-t}. Можно так же заметить, что время работы при $r = 0.5$ меньше времени при $r = 1$, это связано с тем, что некоторое время тратится на создание максимального перекрытия.
+
+Таким образом, нет смысла брать большое $l$, повышая время работы, но не гарантируя улучшения получившихся разбиений.
+
+\begin{figure}[H]
+	\begin{tikzpicture}
+		\begin{axis}[
+		    table/col sep = semicolon,
+		    height = 0.16\paperheight,
+		    width = 0.4\columnwidth,
+		    xlabel = {$l$},
+		    ylabel = {$t$},
+		    legend pos = north east,
+		    no marks,
+		    title = {celegans\_metabolic},
+		    y label style={at={(axis description cs:0,.5)}, anchor=south},
+		    yticklabel style={/pgf/number format/fixed,
+                  /pgf/number format/precision=4},
+		]
+		\addplot table [x = {l}, y={time}]{data/es/l/celegans_l_0.5.csv};
+		\addplot table [x = {l}, y={time}]{data/es/l/celegans_l_1.csv};
+		\end{axis}
+	\end{tikzpicture}
+	\begin{tikzpicture}
+		\begin{axis}[
+		    table/col sep = semicolon,
+		    height = 0.16\paperheight,
+		    width = 0.4\columnwidth,
+		    xlabel = {$l$},
+		    ylabel = {$t$},
+		    legend style = {
+		    	cells = {anchor = west},
+		    	legend pos = outer north east
+		    },
+		    no marks,
+		    title = {jazz},
+		    y label style={at={(axis description cs:0,.5)}, anchor=south},
+		    yticklabel style={/pgf/number format/fixed,
+                  /pgf/number format/precision=4},
+		]
+		\addplot table [x = {l}, y={time}]{data/es/l/jazz_l_0.5.csv};
+		\addplot table [x = {l}, y={time}]{data/es/l/jazz_l_1.csv};
+		\legend{{$r = 0.5$}, {$r = 1$}};
+		\end{axis}
+	\end{tikzpicture}
+	\caption{Время работы от количества шагов $l$ в работе адаптивной ансамблевой стратегии на четырёх графах при $r = 0.5$ и $r = 1$}
+	\label{fig:es-l-t}
+\end{figure}
+
+\begin{figure}[H]
+	\begin{tikzpicture}
+		\begin{axis}[
+		    table/col sep = semicolon,
+		    height = 0.16\paperheight,
+		    width = 0.4\columnwidth,
+		    xlabel = {$l$},
+		    ylabel = {$Q$},
+		    legend pos = north east,
+		    no marks,
+		    title = {celegans\_metabolic},
+		    y label style={at={(axis description cs:0,.5)}, anchor=south},
+		    yticklabel style={/pgf/number format/fixed,
+                  /pgf/number format/precision=4},
+		]
+		\addplot table [x = {l}, y={q}]{data/es/l/celegans_l_0.5.csv};
+		\addplot table [x = {l}, y={q}]{data/es/l/celegans_l_1.csv};
+		\end{axis}
+	\end{tikzpicture}
+	\begin{tikzpicture}
+		\begin{axis}[
+		    table/col sep = semicolon,
+		    height = 0.16\paperheight,
+		    width = 0.4\columnwidth,
+		    xlabel = {$l$},
+		    ylabel = {$Q$},
+		    legend style = {
+		    	cells = {anchor = west},
+		    	legend pos = outer north east
+		    },
+		    no marks,
+		    title = {jazz},
+		    y label style={at={(axis description cs:0,.5)}, anchor=south},
+		    yticklabel style={/pgf/number format/fixed,
+                  /pgf/number format/precision=4},
+		]
+		\addplot table [x = {l}, y={q}]{data/es/l/jazz_l_0.5.csv};
+		\addplot table [x = {l}, y={q}]{data/es/l/jazz_l_1.csv};
+		\legend{{$r = 0.5$}, {$r = 1$}};
+		\end{axis}
+	\end{tikzpicture}
+	\begin{tikzpicture}
+		\begin{axis}[
+		    table/col sep = semicolon,
+		    height = 0.16\paperheight,
+		    width = 0.4\columnwidth,
+		    xlabel = {$l$},
+		    ylabel = {$Q$},
+		    legend pos = north east,
+		    no marks,
+		    title = {as-22july06},
+		    y label style={at={(axis description cs:0,.5)}, anchor=south},
+		    yticklabel style={/pgf/number format/fixed,
+                  /pgf/number format/precision=3},
+		]
+		\addplot table [x = {l}, y={q}]{data/es/l/july_l_0.5.csv};
+		\addplot table [x = {l}, y={q}]{data/es/l/july_l_1.csv};
+		\end{axis}
+	\end{tikzpicture}
+	% \hskip 10pt
+	\begin{tikzpicture}
+		\begin{axis}[
+		    table/col sep = semicolon,
+		    height = 0.16\paperheight,
+		    width = 0.4\columnwidth,
+		    xlabel = {$l$},
+		    ylabel = {$Q$},
+		    legend style = {
+		    	cells = {anchor = west},
+		    	legend pos = outer north east
+		    },
+		    no marks,
+		    title = {netscience},
+		    y label style={at={(axis description cs:0,.5)}, anchor=south},
+		    yticklabel style={/pgf/number format/fixed,
+                /pgf/number format/precision=4},
+		]
+		\addplot table [x = {l}, y={q}]{data/es/l/netscience_l_0.5.csv};
+		\addplot table [x = {l}, y={q}]{data/es/l/netscience_l_1.csv};
+		\legend{{$r = 0.5$}, {$r = 1$}};
+		\end{axis}
+	\end{tikzpicture}
+	\caption{Зависимость модулярности от количества шагов $l$ в работе адаптивной ансамблевой стратегии на четырёх графах при $r = 0.5$ и $r = 1$}
+	\label{fig:es-l-q}
+\end{figure}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\subsection{Время работы}
+
+Одним из способов влиять на время работы является увеличения коэффициента $\beta$ в функции качества $f(Q, k) = -\alpha(\ln Q - \beta \ln k)$. Это обусловлено тем, что при наличии хорошего финального алгоритма, или при использовании итеративной схемы ансамблевой стратегии, время работы начальных алгоритмом очень критично, в то время как увеличение модулярности начальных алгоритмов на сотые доли может не принести большой выгоды глобально. Стоит отметить, что на графах, у которых существует ярко выраженная оптимальная точка $k$, увеличение $\beta$ не сильно повлияет на модулярность, но зато и не будет влиять на время работы. На графах, у которых с увеличением $k$ растёт модулярность, увеличение $\beta$ снижает модулярность и время работы.
+
+\begin{figure}[H]
+	\begin{tikzpicture}
+		\begin{semilogxaxis}[
+		    table/col sep = semicolon,
+		    height = 0.16\paperheight,
+		    width = 0.47\columnwidth,
+		    xlabel = {$\beta$},
+		    ylabel = {$Q$},
+		    no marks,
+		    title style = {xshift = 3.8cm, yshift = 0cm},
+		    title = {celegans\_metabolic},
+		    y label style={at={(axis description cs:0,.5)}, anchor=south},
+		    yticklabel style={/pgf/number format/fixed,
+                  /pgf/number format/precision=3},
+		]
+		\addplot table [x = {beta}, y = {q}]{data/es/beta/celegans_beta.csv};
+		\end{semilogxaxis}
+	\end{tikzpicture}
+	\hskip -2.3cm
+	\begin{tikzpicture}
+		\begin{semilogxaxis}[
+		    table/col sep = semicolon,
+		    height = 0.16\paperheight,
+		    width = 0.47\columnwidth,
+		    xlabel = {$\beta$},
+		    ylabel = {$t$},
+		    y label style={at={(axis description cs:0.1,.5)}, anchor=south},
+		    no marks,
+		]
+		\addplot[red] table [x = {beta}, y = {time}]{data/es/beta/celegans_beta.csv};
+		\end{semilogxaxis}
+	\end{tikzpicture}	%%%%%%%%%%%%%%%
+	\begin{tikzpicture}
+		\begin{semilogxaxis}[
+		    table/col sep = semicolon,
+		    height = 0.16\paperheight,
+		    width = 0.47\columnwidth,
+		    xlabel = {$\beta$},
+		    ylabel = {$Q$},
+		    no marks,
+		    title style = {xshift = 3.8cm, yshift = 0cm},
+		    title = {jazz},
+		    y label style={at={(axis description cs:0,.5)}, anchor=south},
+		    yticklabel style={/pgf/number format/fixed,
+                  /pgf/number format/precision=3},
+		]
+		\addplot table [x = {beta}, y = {q}]{data/es/beta/jazz_beta.csv};
+		\end{semilogxaxis}
+	\end{tikzpicture}
+	\hskip -2.3cm
+	\begin{tikzpicture}
+		\begin{semilogxaxis}[
+		    table/col sep = semicolon,
+		    height = 0.16\paperheight,
+		    width = 0.47\columnwidth,
+		    xlabel = {$\beta$},
+		    ylabel = {$t$},
+		    y label style={at={(axis description cs:0.1,.5)}, anchor=south},
+		    no marks,
+		]
+		\addplot[red] table [x = {beta}, y = {time}]{data/es/beta/jazz_beta.csv};
+		\end{semilogxaxis}
+	\end{tikzpicture}	%%%%%%%%%%%%%%%
+	\begin{tikzpicture}
+		\begin{semilogxaxis}[
+		    table/col sep = semicolon,
+		    height = 0.16\paperheight,
+		    width = 0.47\columnwidth,
+		    xlabel = {$\beta$},
+		    ylabel = {$Q$},
+		    no marks,
+		    title style = {xshift = 3.8cm, yshift = -0.1cm},
+		    title = {as-22july06},
+		    y label style={at={(axis description cs:0,.5)}, anchor=south},
+		    yticklabel style={/pgf/number format/fixed,
+                  /pgf/number format/precision=3},
+		]
+		\addplot table [x = {beta}, y = {q}]{data/es/beta/july_beta.csv};
+		\end{semilogxaxis}
+	\end{tikzpicture}
+	\hskip -2.2cm
+	\begin{tikzpicture}
+		\begin{semilogxaxis}[
+		    table/col sep = semicolon,
+		    height = 0.16\paperheight,
+		    width = 0.47\columnwidth,
+		    xlabel = {$\beta$},
+		    ylabel = {$t$},
+		    y label style={at={(axis description cs:0.03,.5)}, anchor=south},
+		    no marks,
+		]
+		\addplot[red] table [x = {beta}, y = {time}]{data/es/beta/july_beta.csv};
+		\end{semilogxaxis}
+	\end{tikzpicture}	%%%%%%%%%%%%%%%
+	\begin{tikzpicture}
+		\begin{semilogxaxis}[
+		    table/col sep = semicolon,
+		    height = 0.16\paperheight,
+		    width = 0.47\columnwidth,
+		    xlabel = {$\beta$},
+		    ylabel = {$Q$},
+		    no marks,
+		    title style = {xshift = 3.8cm, yshift = 0cm},
+		    title = {netscience},
+		    y label style={at={(axis description cs:0,.5)}, anchor=south},
+		    yticklabel style={/pgf/number format/fixed,
+                  /pgf/number format/precision=3},
+		]
+		\addplot table [x = {beta}, y = {q}]{data/es/beta/netscience_beta.csv};
+		\end{semilogxaxis}
+	\end{tikzpicture}
+	\hskip -1.4cm
+	\begin{tikzpicture}
+		\begin{semilogxaxis}[
+		    table/col sep = semicolon,
+		    height = 0.16\paperheight,
+		    width = 0.47\columnwidth,
+		    xlabel = {$\beta$},
+		    ylabel = {$t$},
+		    y label style={at={(axis description cs:0.05,.5)}, anchor=south},
+		    no marks,
+		]
+		\addplot[red] table [x = {beta}, y = {time}]{data/es/beta/netscience_beta.csv};
+		\end{semilogxaxis}
+	\end{tikzpicture}
+	\caption{Зависимость модулярности и времени работы алгоритма от параметра $\beta$ в работе адаптивной ансамблевой стратегии на четырёх графах}
+	\label{fig:es-beta1}
+\end{figure}
+
+Рисунок \ref{fig:es-beta1} был получен при применении адаптивной ансамблевой стратегии с параметрами $d = 2,\ f(Q, k) = -1000(\ln Q - \beta \ln k),\ \hat{k}_0 = 5,\ l = 8,\ r = 0.5$. Видно, что на графах \emph{celegans\_metabolic}, \emph{netscience} и \emph{jazz} увеличение $\beta$ очень сильно влияло на время работы, при этом на первом графе модулярность росла, а на втором и третьем вела себя непредсказуемо. На графе \emph{as-22july06} время и модулярность оставались на одном уровне с ростом $\beta$ (это объясняется тем, что оптимальным $k$ является единица).
+
+Другим подходом к ограничению времени является установка максимального возможного значения $k_n^{+}$ и $\hat{k}_n$ (как $k_n^{-}$ и $\hat{k}_n$ ограничены снизу единицей).
